--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Jeremy's PLU List</title>
+<title>Grocery Outlet PLU List</title>
+<link rel="icon" type="image/png" href="icon.png">
+
+
+
 <style>
   body {
     font-family: Arial, sans-serif;
